fix(dialog-edit-profile): adjust email input layout for improved responsiveness feat(styles): add overflow-x hidden utility class for better layout control

--- a/src/styles/out.css
+++ b/src/styles/out.css
@@ -2001,6 +2001,10 @@ summary {
   overflow-x: auto;
 }
 
+.ox-h {
+  overflow-x: hidden;
+}
+
 .oy-auto {
   overflow-y: auto;
 }
